feat: add a cron task to remove old events
APIM-8868